tests/integration/records/errors/quantified-constraint-violation/main.cx
fun f<Rec: {...: String}>(x: Rec) {
}

fun main() {
  f({prop: 10})
}
